package com.company;

import archivo.LecturaEscritura;

public class CargadoPartida<T> extends LecturaEscritura {
    public CargadoPartida(String nombreDeArchivo) {
        super(nombreDeArchivo);
    }
}
